unpackaged/main/default/objects/User/fields/Community_View__c.field-meta.xml
<CustomField>
    <fullName>Community_View__c</fullName>
    <label>Community View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biocomposites - MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>Biocomposites - MARKET DEVELOPMENT MANAGER UK</fullName>
            </value>
            <value>
                <fullName>Biocomposites - REGIONAL MANAGER CANADA</fullName>
            </value>
            <value>
                <fullName>Biocomposites - REGIONAL MANAGER USA</fullName>
            </value>
            <value>
                <fullName>Biocomposites - SALES MANAGER CHINA</fullName>
            </value>
            <value>
                <fullName>Biocomposites - SALES MANAGER INDIA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR CANADA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR EU (English)</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR INDIA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR SOUTH AMERICA</fullName>
            </value>
            <value>
                <fullName>Community - DISTRIBUTOR USA</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>Surgeon - Canada</fullName>
            </value>
            <value>
                <fullName>Surgeon - EU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>