unpackaged/main/default/objects/User/fields/Contact_ID_For_batch__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_For_batch__c</fullName>
    <inlineHelpText>this is used for the campaign batch process</inlineHelpText>
    <label>Contact ID (For batch)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>