unpackaged/main/default/objects/User/fields/Email_And_Username_Different__c.field-meta.xml
<CustomField>
    <fullName>Email_And_Username_Different__c</fullName>
    <formula>IF( Email  &lt;&gt;  Username , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email And Username Different?</label>
    <type>Checkbox</type>
</CustomField>