unpackaged/main/default/objects/User/fields/Enable_for_hub_app__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_hub_app__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This function is active for &#39;community&#39; uers only.
Full licences can access the app whether this is ticked or not.</inlineHelpText>
    <label>Enable for hub app</label>
    <type>Checkbox</type>
</CustomField>