unpackaged/main/default/objects/User/fields/ID_of_linked_account__c.field-meta.xml
<CustomField>
    <fullName>ID_of_linked_account__c</fullName>
    <formula>Contact.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for brainshark and distributor</inlineHelpText>
    <label>ID of linked account</label>
    <type>Text</type>
</CustomField>