unpackaged/main/default/objects/User/fields/Push_Sig_Block__c.field-meta.xml
<CustomField>
    <fullName>Push_Sig_Block__c</fullName>
    <label>Push Sig Block</label>
    <type>TextArea</type>
</CustomField>