unpackaged/main/default/objects/User/fields/Territories__c.field-meta.xml
<CustomField>
    <fullName>Territories__c</fullName>
    <label>Territories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>