unpackaged/main/default/objects/User/fields/US_View__c.field-meta.xml
<CustomField>
    <fullName>US_View__c</fullName>
    <formula>IF(CONTAINS(Profile.Name, &quot;US&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US View</label>
    <type>Checkbox</type>
</CustomField>