unpackaged/main/default/objects/User/fields/User_Name_No_Sp_Chars__c.field-meta.xml
<CustomField>
    <fullName>User_Name_No_Sp_Chars__c</fullName>
    <formula>SUBSTITUTE(  Email  , &quot;&#39;&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name (No Sp Chars)</label>
    <type>Text</type>
</CustomField>