unpackaged/main/default/objects/User/validationRules/Can_not_set_for_hub_on_new.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_set_for_hub_on_new</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Enable_for_hub_app__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Enable_for_hub_app__c</errorDisplayField>
    <errorMessage>You can not have this box ticked when you create a new user</errorMessage>
</ValidationRule>