unpackaged/main/default/objects/User/validationRules/Country_field_needs_to_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_field_needs_to_be_populated</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Country )</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>The country field can not be left blank</errorMessage>
</ValidationRule>