unpackaged/main/default/objects/User/validationRules/Customer_Community_Login_User_can_not_be.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Community_Login_User_can_not_be</fullName>
    <active>false</active>
    <errorConditionFormula>Profile.Name = &quot;Customer Community Login User&quot;</errorConditionFormula>
    <errorDisplayField>ProfileId</errorDisplayField>
    <errorMessage>You are not allowed to select this profile</errorMessage>
</ValidationRule>