unpackaged/main/default/objects/User/listViews/All_Users_MC.listView-meta.xml
<ListView>
    <fullName>All_Users_MC</fullName>
    <columns>FULL_NAME</columns>
    <columns>Community_View__c</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>mobilecaddy.net</value>
    </filters>
    <label>All Users - MC</label>
</ListView>