unpackaged/main/default/objects/User/listViews/API_Only_Users.listView-meta.xml
<ListView>
    <fullName>API_Only_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Community_View__c</columns>
    <filterScope>Everything</filterScope>
    <label>API Only Users</label>
    <sharedTo>
        <role>Biocomposites_Admin</role>
    </sharedTo>
</ListView>