unpackaged/main/default/objects/User/listViews/Normal_Salesforce_Accounts.listView-meta.xml
<ListView>
    <fullName>Normal_Salesforce_Accounts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Community_View__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Territories__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Biocomposites COMMUNITY USER</value>
    </filters>
    <label>Normal Salesforce Accounts</label>
</ListView>